## CHANGES
---
## Update v.0.8.1
* Minor bug fixes

## Update v.0.8.0
* Added support for automatic isotopomer selection. To use this feature, run `riana/riana.py` with `--fs Auto`.
* Added experimental support for in vitro heavy water labeling. To use this feature, run `riana/riana.py` with `--label hw_cell`.

## Update v.0.7.3
* Added graphical user interface (GUI) for RIANA. To use the GUI, run `riana/riana_ui.py` in the command line.

## Update v.0.7.2
* Included additional Snakemake options in the config files
* The argument for isotope now takes in multiple numerical values separated by space e.g., 2 4 6 8

## Update v.0.7.1
* Added parameter for mass defect -D to command line argument for riana integrate. See documentation for detail
* Added the flag -p to the command line argument for riana fit, which toggles plotting fitted curves
* Added the fag -w to the command line argument for riana integrate, for writing out pre-integration intensities

## Update v.0.7.0
* RIANA now supports a Snakemake pipeline that performs protein database search, filtering, integration and fitting
* Added native support to perform curve-fitting and output best-fit curve plots
* Added support for one-pool, two-compartment (Guan et al.) and three-exponent (Fornasiero et al.) models
* Match between runs is temporarily disabled to support the Snakemake workflow and will return in a later version.

## Update v.0.6.4
* Added support for standalone Percolator results for v.3.0.5.
* Organize the project in identical manner, include one psms.txt for target psms (output of Percolator -m tag) in each percolator folder.
* When using standalone Percolator dist, peptide masses are calculated de novo
* Toggle match between runs using --mbr or -b
* No longer writes results of individual fractions separately.

## Update v.0.6.3
* Fixed an issue where mbr all-NaN slice causes an error
* Changed project directory structure so that mzml files have to be within an mzml subfolder and percolator files